--- a/build.gradle
+++ b/build.gradle
@@ -61,14 +61,14 @@ ext {
 
     androidx_annotation_version = "1.6.0"
     // 1.7 needs Android 14 !
-    androidx_appcompat_version = '1.6.1'
+    androidx_appcompat_version = "1.6.1"
     // 1.3 needs Android 14 !
-    androidx_camerax_version = '1.2.3'
+    androidx_camerax_version = "1.2.3"
     androidx_cardview_version = "1.0.0"
     androidx_collection_version = "1.3.0-alpha04"
-    androidx_constraintlayout_core_version = '1.0.4'
+    androidx_constraintlayout_core_version = "1.0.4"
     // 2.2 needs Android 14 !
-    androidx_constraintlayout_version = '2.1.4'
+    androidx_constraintlayout_version = "2.1.4"
     androidx_coordinatorlayout_version = "1.2.0"
     // 1.12 needs Android 14 !
     androidx_core_version = "1.11.0-beta02"
@@ -76,11 +76,11 @@ ext {
     androidx_documentfile_version = "1.1.0-alpha01"
     androidx_drawerlayout_version = "1.2.0"
     androidx_exifinterface_version = "1.3.6"
-    androidx_fragment_version = '1.6.1'
+    androidx_fragment_version = "1.6.1"
     androidx_interpolator_version = "1.0.0"
     androidx_lifecycle_version = "2.6.1"
-    androidx_preference_version = '1.2.1'
-    androidx_recyclerview_version = '1.3.1'
+    androidx_preference_version = "1.2.1"
+    androidx_recyclerview_version = "1.3.1"
 //        androidx_slidingpanelayout_version = "1.2.0"
     androidx_viewpager2_version = "1.1.0-beta02"
     androidx_window_version = "1.1.0"
@@ -97,16 +97,16 @@ ext {
     tiny_zxing_wrapper_version = "1.0.0"
 
     // https://github.com/zxing/zxing
-    zxing_core_version = '3.5.2'
+    zxing_core_version = "3.5.2"
 
     // https://github.com/ACRA/acra
-    acra_version = '5.11.0'
+    acra_version = "5.11.0"
 
     // https://github.com/mockito/mockito
-    mockito_version = '5.4.0'
+    mockito_version = "5.4.0"
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
-    jupiter_version = '5.10.0'
+    jupiter_version = "5.10.0"
 
     // https://developer.android.com/jetpack/androidx/releases/test
     androidx_arch_core_testing = "2.2.0"
